# advent-of-code

./: .gitignore  Cargo.toml  go.work
.devcontainer/: devcontainer.json  postCreate.sh
2019/: build.zig  build.zig.zon
2019/day2/: parsed.txt
2019/lib/: regez.c  regez.h
2019/src/: aoc.zig  day1.zig  day2.zig  day3.zig  main.zig  regex.zig  root.zig
2020/: Cargo.toml
2020/src/: day1.rs  day10.rs  day11.rs  day13.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2021/: Cargo.toml
2021/src/: day2.rs  day4.rs  main.rs
2022/day01/: go.mod  main.go  main_test.go
2022/day02/: go.mod  main.go  main_test.go
2022/day03/: go.mod  main.go
2022/day04/: go.mod  main.go
2022/day05/: go.mod  main.go
2022/day06/: go.mod  main.go  main_test.go
2022/day07/: go.mod  main.go
2022/day08/: go.mod  main.go  main_test.go
2023/day01/: go.mod  main.go
2023/day02/: go.mod  main.go
2023/day03/: go.mod  main.go  main_test.go
2023/day04/: go.mod  main.go  main_test.go
2023/day05/: go.mod  main.go  main_test.go
2023/day06/: go.mod  main.go
2023/day07/: go.mod  main.go
2023/day08/: go.mod  main.go
2023/day09/: go.mod  main.go  main_test.go
2023/day10/: go.mod  main.go  main_test.go
2023/day11/: go.mod  main.go
2023/day12/: go.mod  main.go  main_test.go
2023/day13/: go.mod  main.go  (+2 more)
2024/: utils.py
2025/: build.zig  build.zig.zon
lib/: Cargo.toml
src/: day1.rs  day10.rs  day11.rs  day13.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  utils.rs
(+55 files in other folders)
