[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Thomas Matecki <thomas@marianatek.com>"]
edition = "2018"

[features]
default = []
# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"